--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "with-typescript-styled-components",
+  "name": "shuffle-team",
+  "author": "shoota",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
